<resources>
    <string name="app_name">GuruApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hint_userNic">NIC</string>
    <string name="hint_password">Password</string>
    <string name="ExamMarkManagement">ExamMaksManagement</string>
    <string name="title_activity_exam_maks_management">ExamMaksManagement</string>
    <string name="AddMarks">Add Marks</string>
    <string name="SearchMarks">SearchMarks</string>
    <string name="ExamId">ExamId</string>
    <string name="ExamMark">Exam Mark</string>
    <string name="StudentId">Student Id</string>
    <string name="Center">Center</string>
    <string name="Save">Save</string>
    <string name="SearchandUpdate">Search And Update</string>
    <string name="Search">Search</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="shutDown">Log Out</string>
    <string name="performance">Performance</string>
    <string name="testId">Test Id</string>
    <string name="View">View</string>
    <string name="GuruApp">GuruApp</string>
    <string name="HomeGuruApp">GuruApp!</string>
    <string name="GuruAppWeb">www.GuruApp.lk</string>
    <string name="feeManagement">Fee_Management</string>
    <string name="title_activity_fee_management">FeeManagement</string>
    <string name="title_activity_fees_management">FeesManagement</string>
    <string name="AddFeeDetails">Add Fee Details</string>
    <string name="UpdateFeeDetails">Update Fee Details</string>
    <string name="SearchFeeDetails">Search Fee Details</string>
    <string name="StudentID">Student_ID</string>
    <string name="StudentName">Student Name</string>
    <string name="Month">Month</string>
    <string name="Type">Type</string>
    <string name="Amount">Amount</string>
    <string name="SearchFee">SearchFee</string>
    <string name="Year">Year</string>
    <string name="title_activity_user_management">UserManagement</string>
    <string name="UserManagement">UserManagement</string>
    <string name="AddUser">Add User</string>
    <string name="SearchUpdateDelete">Search User</string>
    <string name="UserID">ID</string>
    <string name="UserName">Name</string>
    <string name="Phone">Phone Number</string>
    <string name="Email">name@gmail.com</string>
    <string name="Subject">Subject</string>


    <string name="AddStudents">Student Id</string>
    <string name="studentName">Student Name</string>
    <string name="phone">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="button">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="Profile">Profile</string>
    <string name="FeeDetails">Fee Details</string>
    <string name="examMark">Exam Mark Management</string>
    <string name="headerFee">Add Fee Details</string>
    <string name="savedetails">Save Details</string>
    <string name="searchfeedetails">Search Fee Details</string>
    <string name="searchstudents">Search Student</string>
    <string name="title_activity_student_profile">Student Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adduser">ADD USER</string>
    <string name="userid">User ID :</string>
    <string name="username">User Name :</string>
    <string name="userphone">Phone :</string>
    <string name="useremail">Email :</string>
    <string name="usersubject">Subject :</string>
    <string name="userpassword">Password :</string>
    <string name="buttonadd">ADD</string>
    <string name="buttonsearch">SEARCH</string>
    <string name="buttonupdate">UPDATE</string>
    <string name="buttondelete">DELETE</string>
    <string name="searchdeleteupdateuser">SEARCH UPDATE DELETE USER</string>
</resources>
