<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_fee_details"
            android:icon="@drawable/ic_marks_add"
            android:title="@string/AddFeeDetails" />
        <item
            android:id="@+id/nav_search_fee_details"
            android:icon="@drawable/ic_search_marks"
            android:title="@string/SearchFeeDetails" />
        <item
            android:id="@+id/nav_update_fee_details"
            android:icon="@drawable/ic_performance"
            android:title="@string/UpdateFeeDetails" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_shut_down"
            android:title="@string/shutDown" />
    </group>




</menu>
