<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"

        android:text="Add Student Details"
        android:textColor="#1D2222"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/AddStudents"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/studentName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/gender"
        android:textSize="18sp"
        tools:text="@string/gender" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:text="@string/male" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="161dp"
        android:layout_height="47dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="-45dp"
        android:text="@string/female" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button4"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="40dp"
        android:background="@color/btnColor"
        android:text="@string/button" />

</LinearLayout>