<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="302dp"
        android:layout_height="46dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="sans-serif-medium"
        android:text="Add Fee Details"
        android:textAlignment="viewStart"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="305dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/StudentID"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="305dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:hint="@string/StudentName"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/Month"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="303dp"
        android:layout_height="51dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:hint="@string/Amount"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/addSpinner"
        android:layout_width="307dp"
        android:layout_height="51dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="17dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="125dp"
        android:layout_height="47dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="80dp"
        android:background="#1AB3A2"
        android:text="Save Details"
        android:textColor="@android:color/black" />
</LinearLayout>