<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchUpdateDeleteUser">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:layout_gravity="center"
            android:text="SEARCH UPDATE DELETE USER"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:text="User ID :"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="-30dp"
            android:ems="10"
            android:hint="@string/UserID"
            android:inputType="textPersonName" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:background="@color/btnColor"
            android:text="SEARCH" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="25dp"
            android:text="User Name :"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="-30dp"
            android:ems="10"
            android:hint="@string/UserName"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="25dp"
            android:text="Phone :"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="-30dp"
            android:ems="10"
            android:hint="@string/Phone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="25dp"
            android:text="Email :"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="-30dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="25dp"
            android:text="Subject :"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText20"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="-30dp"
            android:ems="10"
            android:hint="@string/Subject"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="25dp"
            android:text="Password :"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="-30dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button01"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="80dp"
            android:background="@color/btnColor"
            android:text="UPDATE"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button02"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="-50dp"
            android:layout_marginRight="80dp"
            android:text="DELETE"
            android:background="@color/btnColor"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>